# Gitodo

./: .gitignore  INSTALL_LINUX.sh  INSTALL_WINDOWS.bat  LICENSE  README.md  api.py  cmd.py  commit.py  db.py  gd.bat  gd.sh  git.py  grats.py  main.py  old_api.py  old_app.py  plan.md  pretty.py  pyproject.toml  run.py  task.py  test.py  today.py
src/: api.py  db.py  git.py  grats.py  main.py
