[project]
name = "gitodo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "expression>=5.6.0",
    "more-itertools>=10.8.0",
    "mypy>=1.19.1",
    "python-lsp-server>=1.14.0",
    "types-colorama>=0.4.15.20250801",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.38.0",
]


[tool.basedpyright]
reportUnusedCallResult = 'none'
reportIncompatibleMethodOverride = 'none'
reportMissingSuperCall = 'none'
reportUninitializedInstanceVariable = 'none'
reportUnsafeMultipleInheritance = 'none'
reportAny = 'none'
